# driftless-cast

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  driftless-cast-plan.md  fly.toml  pyproject.toml  serve_static.py
.github/workflows/: backtest.yml  fly-deploy.yml  refresh-forecast.yml
data/calibration/: dd_fit_diagnostics.json  mohseni_fit.json  recession_fit.json  runoff_response_fit.json
data/seed/: education.json  gauges.json  reaches.json  species.json
docs/: DAILY_SCORE_FLATNESS_RESEARCH_AUDIT.md  DEPLOYMENT.md  MODEL_TRUTH_ROADMAP.md  REFERENCES.md
scripts/: compile_src.py
src/: __init__.py
src/api/: main.py  routes.py
src/db/: __init__.py  __main__.py  queries.py  schema.sql
src/ingest/: __init__.py  gbif.py  idigbio.py  inat.py  nwps.py  nws.py  openmeteo.py  usgs.py  usgs_water_temp.py  wi_dnr.py
src/jobs/: __init__.py  forecast_refresh.py  hourly_ingest.py  nightly_rebuild.py
src/models/: __init__.py  anomaly.py  dd_calibration.py  dd_pipeline.py  degree_days.py  dry_score.py  fly_recommender.py  forecast_builder.py  hatch_predictor.py  mohseni_fit.py  nymph_score.py  recession.py  regime.py  runoff_risk.py  score_calibration.py  seasonal.py  solar.py  temp_estimator.py  thermal_profile.py
src/scripts/: backfill_temps.py  backtest.py  bootstrap_reaches.py  enrich_dnr.py  expand_wi_reaches.py  fetch_nhdplus_geometry.py  fit_dd_thresholds.py  fit_recession.py  (+2 more)
tests/: conftest.py  test_acceptance.py  test_api.py  test_core_chain.py  test_models.py
web/: index.html  map.js  styles.css
(+5 files in other folders)
