[tool.poetry]
name = "driftless-cast"
version = "0.1.0"
description = "A hyperlocal fly-fishing forecast tool for the Driftless Area."
authors = ["driftless-cast team <hello@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
requests = "^2.31.0"
polars = "^0.19.0"
pydantic = "^2.9.0"
apscheduler = "^3.11.0"
python-dateutil = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
vcrpy = "^4.1.0"
httpx = "^0.28.0"

[tool.poetry.scripts]
start-api = "src.api.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
